[package]
name = "ha-pam-authenticate"
description = "Authenticate user name and password from environment variables against PAM (for homeassistant)"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pam = "0.7"
clap = { version = "3.1", features = ["derive"] }

[profile.release]
lto = "thin"